--- a/.github/workflows/runpythonfile.yml
+++ b/.github/workflows/runpythonfile.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Run python file
 
 on:
   issues:
@@ -12,7 +12,8 @@ jobs:
     runs-on: 'ubuntu-20.04'
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-python@v4
       with:
-       node-version: '14'
-    - run: node randomfile.js
+        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+    - run: python randomfile.py
