--- a/.github/workflows/runpythonfile.yml
+++ b/.github/workflows/runpythonfile.yml
@@ -9,9 +9,7 @@ on:
     
 jobs:
   conditional_step:
-    runs-on: 'ubuntu-20.04'
-    env:
-      Issue: https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }}
+    runs-on: 'ubuntu-latest'
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
@@ -20,4 +18,4 @@ jobs:
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - run: | 
            pip3 install tweepy
-           python3 randomfile.py ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} $Issue 
+           python3 randomfile.py ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }} 
