--- a/.github/workflows/runpythonfile.yml
+++ b/.github/workflows/runpythonfile.yml
@@ -18,4 +18,5 @@ jobs:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - run: | 
-            echo ${{ github.event.issue.label }}
+          echo "hello how are you"
+          echo ${{ github.event.issue.number }}
