--- a/.github/workflows/runpythonfile.yml
+++ b/.github/workflows/runpythonfile.yml
@@ -11,6 +11,8 @@ jobs:
   sendGoodFirstIssueTweet:
     if:  github.event.label.name == 'good first issue'
     runs-on: 'ubuntu-latest'
+    env:
+      Issue: https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }} 
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
@@ -19,5 +21,5 @@ jobs:
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - run: | 
           pip3 install tweepy
-          python3 randomfile.py https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }} ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} 
+          python3 randomfile.py ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} $Issue
 
