--- a/.github/workflows/runpythonfile.yml
+++ b/.github/workflows/runpythonfile.yml
@@ -2,16 +2,11 @@
 
 name: Run Python file that sends a tweet
 
-on:
-  issues:
-    types: [labeled]
+on: push
     
 jobs:
   sendGoodFirstIssueTweet:
-    if:  github.event.label.name == 'good first issue'
     runs-on: 'ubuntu-latest'
-    env:
-      Issue: https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }} 
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
@@ -20,5 +15,5 @@ jobs:
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - run: | 
           pip3 install tweepy
-          python3 createtweet.py ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} $Issue
+          python3 createtweet.py ${{ secrets.CONSUMER_KEY }} ${{ secrets.CONSUMER_SECRET }} ${{ secrets.ACCESS_TOKEN }} ${{ secrets.ACCESS_TOKEN_SECRET }} http://solidjs.com
 
